"Finished studio part one. Added Category object and ability to display and add categories. Cleaned up styling as well."

--- a/src/main/resources/templates/cheese/index.html
+++ b/src/main/resources/templates/cheese/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
-<body class="container">
-
-<h1 th:text="${title}">Default Title</h1>
-
-<nav th:replace="fragments :: navigation"></nav>
-
-<p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
-
-
-<table class="table">
-
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Type</th>
-    </tr>
-
-    <tr th:each="cheese : ${cheeses}">
-        <td th:text="${cheese.name}"></td>
-        <td th:text="${cheese.description}"></td>
-        <td th:text="${cheese.type.name}"></td>
-    </tr>
-
-</table>
-
+<body>
+<div class="row">
+    <div class="col-sm-2"></div>
+    <div class="col-sm-8">
+        <h1 th:text="${title}">Default Title</h1>
+        <nav th:replace="fragments :: navigation"></nav>
+        <br />
+        <p th:unless="${cheeses} and ${cheeses.size()}">no cheese :(</p>
+        <table class="table">
+            <tr>
+                <th>Name</th>
+                <th>Description</th>
+                <th>Type</th>
+            </tr>
+            <tr th:each="cheese : ${cheeses}">
+                <td th:text="${cheese.name}"></td>
+                <td th:text="${cheese.description}"></td>
+                <td th:text="${cheese.type.name}"></td>
+            </tr>
+        </table>
+    </div>
+    <div class="col-sm-2"></div>
+</div>
 </body>
 </html>
