--- a/src/main/resources/templates/menu/index.html
+++ b/src/main/resources/templates/menu/index.html
@@ -11,7 +11,7 @@
             <table class="table table-striped table-hover">
                 <tr th:each="menu : ${menus}">
                     <th>Name</th>
-                    <td th:text="${menu.name}"></td>
+                    <td><a th:href="@{'menu/view/' + ${menu.id}}" th:text="${menu.name}"></a></td>
                 </tr>
             </table>
             <br />
